# CLIF-eligibility-for-mobilization

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_pipeline.bat  run_pipeline.sh
code/: 01_cohort_identification.ipynb  01_cohort_identification.py  01_cohort_identification_marimo.py  01b_aggregate_yearly.py  02_mobilization_analysis.ipynb  02_mobilization_analysis.py  02_mobilization_analysis_marimo.py  03_combined_analysis.R  04_final_sensitivity_analysis.ipynb  04_sensitivity_forest_plots.R  05_sensitivity_competing_risk.R  06_comprehensive_sensitivity_analysis.R  README.md  cohort_identification.ipynb  pyCLIF.py  sofa_score.py
config/: config_template.json
